# rules_proto

./: MODULE.bazel  WORKSPACE.bazel
