load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# load protobuf
http_archive(
    name = "com_google_protobuf",
    strip_prefix = "protobuf-24.4",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/refs/tags/v24.4.tar.gz",
    ],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()
